--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-        with:
+        env:
           SERVER_HOST: ${{ RKUN_SERVER_HOST }}
       - name: Upload artifact
         id: artifact-upload
