--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,9 @@
       "matches": ["https://www.youtube.com/watch*"]
     }
   ],
-  "permissions": ["storage"]
+  "permissions": ["storage"],
+  "icons": {
+    "128": "icons/icon128w.png",
+    "48": "icons/icon48w.png"
+  }
 }
